--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "koa-multer": "*",
     "log4js": "^1.1.1",
     "pug": "^2.0.0-rc.1",
     "redis": "^2.7.1",
