--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "log4js": "^1.1.1",
     "pug": "^2.0.0-rc.1",
     "redis": "^2.7.1",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
