--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "log4js": "^1.1.1",
     "pug": "^2.0.0-rc.1",
     "redis": "^2.7.1",
+    "request": "^2.85.0",
     "swig": "^1.4.2",
     "xml2js": "^0.4.19"
   },
