--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redis": "^2.7.1",
     "request": "^2.85.0",
     "swig": "^1.4.2",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "baidu-aip-sdk": "*"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
