--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "baidu-aip-sdk": "*",
     "debug": "^2.6.3",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^2.0.1",
+    "koa-multer": "*",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
-    "koa-multer": "*",
     "log4js": "^1.1.1",
     "pug": "^2.0.0-rc.1",
     "redis": "^2.7.1",
     "request": "^2.85.0",
+    "socket.io": "^2.1.1",
     "swig": "^1.4.2",
-    "xml2js": "^0.4.19",
-    "baidu-aip-sdk": "*"
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
