--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "baidu-aip-sdk": "*",
-    "client-sessions": "*",
     "debug": "^2.6.3",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
+    "koa-session": "*",
     "koa-json": "^2.0.2",
     "koa-logger": "^2.0.1",
     "koa-multer": "*",
