--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "baidu-aip-sdk": "*",
-    "client-sessions": "*",
     "debug": "^2.6.3",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
@@ -20,6 +19,7 @@
     "koa-multer": "*",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
+    "koa-session": "*",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "log4js": "^1.1.1",
